refactor application configuration and LLM Gateway configuration, and make small enhancements across the application