@@ -13,6 +13,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -50,13 +51,11 @@ public class SalesforceService {
         
         logger.info("Logging into Salesforce...");
         
-        HttpPost loginPost = new HttpPost(salesforceConfig.getLoginUrl() + "/services/Soap/u/" + 
-                                         salesforceConfig.getApiVersion().replace("v", ""));
+        HttpPost loginPost = new HttpPost(salesforceConfig.getLoginUrl() + "/services/Soap/u/" + salesforceConfig.getApiVersion().replace("v", ""));
         
         String soapBody = String.format("""
             <?xml version="1.0" encoding="utf-8"?>
-            <soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" 
-                             xmlns:urn="urn:partner.soap.sforce.com">
+            <soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:urn="urn:partner.soap.sforce.com">
                 <soapenv:Header/>
                 <soapenv:Body>
                     <urn:login>
@@ -67,13 +66,10 @@ public class SalesforceService {
             </soapenv:Envelope>
             """, salesforceConfig.getUsername(), salesforceConfig.getPasswordWithToken());
         
-        loginPost.setEntity(new org.apache.hc.core5.http.io.entity.StringEntity(soapBody, 
-                            org.apache.hc.core5.http.ContentType.create("text/xml", "UTF-8")));
+        loginPost.setEntity(new org.apache.hc.core5.http.io.entity.StringEntity(soapBody, org.apache.hc.core5.http.ContentType.create("text/xml", "UTF-8")));
         loginPost.setHeader("SOAPAction", "login");
         
-        String response = httpClient.execute(loginPost, httpResponse -> {
-            return new String(httpResponse.getEntity().getContent().readAllBytes());
-        });
+        String response = httpClient.execute(loginPost, httpResponse -> new String(httpResponse.getEntity().getContent().readAllBytes()));
         
         // Parse session ID and server URL from SOAP response
         Pattern sessionIdPattern = Pattern.compile("<sessionId>([^<]+)</sessionId>");
@@ -145,19 +141,14 @@ public class SalesforceService {
      */
     public byte[] downloadAttachment(String attachmentId) throws Exception {
         ensureLoggedIn();
-        
-        // Always use REST blob retrieval for attachments
         return downloadAttachmentByRest(attachmentId);
     }
-    
-    
     
     /**
      * Download attachment using REST API
      */
     private byte[] downloadAttachmentByRest(String attachmentId) throws Exception {
-        String url = instanceUrl + "/services/data/" + salesforceConfig.getApiVersion() + 
-                    "/sobjects/Attachment/" + attachmentId + "/Body";
+        String url = instanceUrl + "/services/data/" + salesforceConfig.getApiVersion() + "/sobjects/Attachment/" + attachmentId + "/Body";
         
         HttpGet getRequest = new HttpGet(url);
         getRequest.setHeader("Authorization", "Bearer " + sessionId);
@@ -167,8 +158,7 @@ public class SalesforceService {
             if (response.getCode() == 200) {
                 return response.getEntity().getContent().readAllBytes();
             } else {
-                throw new RuntimeException("HTTP " + response.getCode() + ": " + 
-                                         response.getReasonPhrase());
+                throw new RuntimeException("HTTP " + response.getCode() + ": " + response.getReasonPhrase());
             }
         });
     }
@@ -177,9 +167,8 @@ public class SalesforceService {
      * Execute a SOQL query against Salesforce
      */
     private List<Map<String, Object>> executeQuery(String query) throws Exception {
-        String encodedQuery = java.net.URLEncoder.encode(query, "UTF-8");
-        String url = instanceUrl + "/services/data/" + salesforceConfig.getApiVersion() + 
-                    "/query/?q=" + encodedQuery;
+        String encodedQuery = java.net.URLEncoder.encode(query, StandardCharsets.UTF_8);
+        String url = instanceUrl + "/services/data/" + salesforceConfig.getApiVersion() + "/query/?q=" + encodedQuery;
         
         HttpGet getRequest = new HttpGet(url);
         getRequest.setHeader("Authorization", "Bearer " + sessionId);
@@ -189,8 +178,7 @@ public class SalesforceService {
             if (response.getCode() == 200) {
                 return new String(response.getEntity().getContent().readAllBytes());
             } else {
-                throw new RuntimeException("Query failed with HTTP " + response.getCode() + ": " + 
-                                         response.getReasonPhrase());
+                throw new RuntimeException("Query failed with HTTP " + response.getCode() + ": " + response.getReasonPhrase());
             }
         });
         
@@ -227,20 +215,19 @@ public class SalesforceService {
         
         String subject = (String) record.get("WorkId_and_Subject__c");
         if (subject != null) {
-            // Parse work_id, case_number, step_name, and hostname from Subject format
-            // Example: "W-15540393: Step: SSH_TO_ALL_HOSTS_EU49_DR, Status: FAILED, Case: 58989945 - [PMD/IR@2024-Apr-20 PST]: Maintenance tasks for target EU49 EU51 NA241, Host: ops0-release1-2-am3 -- Caffeine task log attached"
+            // Parse work_id, case_number, step_name, and datacenter from Subject format
             Pattern workPattern = Pattern.compile("(W-\\d+)");
             Pattern casePattern = Pattern.compile("Case[:\\s]*(\\d+)");
             Pattern stepPattern = Pattern.compile("Step[:\\s]+([^,\\s]+)");
-            Pattern hostPattern = Pattern.compile("Host[:\\s]+([^\\s-]+-[^\\s-]+-[^\\s-]+-([^\\s-]+))");
+            Pattern datacenterPattern = Pattern.compile("Host[:\\s]+([^\\s-]+-[^\\s-]+-[^\\s-]+-([^\\s-]+))");
             
             Matcher workMatcher = workPattern.matcher(subject);
             Matcher caseMatcher = casePattern.matcher(subject);
             Matcher stepMatcher = stepPattern.matcher(subject);
-            Matcher hostMatcher = hostPattern.matcher(subject);
+            Matcher datacenterMatcher = datacenterPattern.matcher(subject);
             
             if (workMatcher.find()) {
-                metadata.put("work_id", workMatcher.group(1)); // Store full W-XXXXXX format
+                metadata.put("work_id", workMatcher.group(1));
             }
             if (caseMatcher.find()) {
                 metadata.put("case_number", Integer.parseInt(caseMatcher.group(1)));
@@ -250,9 +237,9 @@ public class SalesforceService {
                 String normalized = stepNameNormalizer.normalize(rawStep);
                 metadata.put("step_name", normalized);
             }
-            if (hostMatcher.find()) {
-                String hostnameSuffix = hostMatcher.group(2); // Extract just the suffix (e.g., "am3")
-                metadata.put("hostname", hostnameSuffix); // keep key for compatibility; mapped to datacenter at save
+            if (datacenterMatcher.find()) {
+                String datacenterSuffix = datacenterMatcher.group(2);
+                metadata.put("datacenter", datacenterSuffix);
             }
         }
         
